feat(api): add roles to /users/me
